--- a/lamp/Vagrantfile
+++ b/lamp/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure("2") do |config|
 
-  # Upgrage puppet to v3
+  # Upgrage puppet.
   # config.vm.provision :shell, :path => "scripts/bootstrap_puppet.sh"
 
   # Enable the Puppet provisioner, with will look in manifests
@@ -14,13 +14,13 @@ Vagrant.configure("2") do |config|
   config.vm.box = "hashicorp/precise32"
 
   # Forward guest port 80 to host port 8888 and name mapping
-  config.vm.network :forwarded_port, guest: 80, host: 8888
+  # config.vm.network :forwarded_port, guest: 80, host: 8888
 
-  # config.vm.network "private_network", ip: "192.168.50.11"
+  config.vm.network "private_network", ip: "192.168.50.11"
 
-  config.vm.synced_folder "webroot/", "/vagrant/webroot/", :owner => "www-data"
-  # If mount hangs, the command may help: sudo rm -f /etc/exports
-  # config.vm.synced_folder "webroot/", "/vagrant/webroot/", nfs: true, nfs_version: "4"
+  # config.vm.synced_folder "webroot/", "/vagrant/webroot/", :owner => "www-data"
+  # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
+  config.vm.synced_folder "webroot/", "/vagrant/webroot/", nfs: true, nfs_version: "4", nfs_udp: true
 
   if Vagrant.has_plugin?("vagrant-cachier")
     # Configure cached packages to be shared between instances of the same base box.
@@ -31,13 +31,13 @@ Vagrant.configure("2") do |config|
     # NFS for shared folders. This is also very useful for vagrant-libvirt if you
     # want bi-directional sync
     config.cache.synced_folder_opts = {
-      # type: :nfs,
+      type: :nfs,
       # The nolock option can be useful for an NFSv3 client that wants to avoid the
       # NLM sideband protocol. Without this option, apt-get might hang if it tries
       # to lock files needed for /var/cache/* operations. All of this can be avoided
       # by using NFSv4 everywhere. Please note that the tcp option is not the default.
       # mount_options: ['rw', 'vers=3', 'tcp', 'nolock']
-      # mount_options: ['rw', 'vers=4', 'tcp']
+      mount_options: ['rw', 'vers=4', 'udp']
     }
     # For more information please check http://docs.vagrantup.com/v2/synced-folders/basic_usage.html
   end
