--- a/lamp/Vagrantfile
+++ b/lamp/Vagrantfile
@@ -11,7 +11,7 @@ Vagrant.configure("2") do |config|
   end
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "hashicorp/precise32"
+  config.vm.box = "puppetlabs/ubuntu-14.04-64-puppet"
 
   # Forward guest port 80 to host port 8888 and name mapping
   # config.vm.network :forwarded_port, guest: 80, host: 8888
@@ -20,7 +20,7 @@ Vagrant.configure("2") do |config|
 
   # config.vm.synced_folder "webroot/", "/vagrant/webroot/", :owner => "www-data"
   # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
-  config.vm.synced_folder "webroot/", "/vagrant/webroot/", nfs: true, nfs_version: "4", nfs_udp: true
+  config.vm.synced_folder "webroot/", "/vagrant/webroot/", nfs: true, nfs_version: "3", nfs_udp: true
 
   if Vagrant.has_plugin?("vagrant-cachier")
     # Configure cached packages to be shared between instances of the same base box.
@@ -36,8 +36,8 @@ Vagrant.configure("2") do |config|
       # NLM sideband protocol. Without this option, apt-get might hang if it tries
       # to lock files needed for /var/cache/* operations. All of this can be avoided
       # by using NFSv4 everywhere. Please note that the tcp option is not the default.
-      # mount_options: ['rw', 'vers=3', 'tcp', 'nolock']
-      mount_options: ['rw', 'vers=4', 'udp']
+      mount_options: ['rw', 'vers=3', 'tcp', 'nolock']
+      # mount_options: ['rw', 'vers=4', 'udp']
     }
     # For more information please check http://docs.vagrantup.com/v2/synced-folders/basic_usage.html
   end
