--- a/lamp/Vagrantfile
+++ b/lamp/Vagrantfile
@@ -13,10 +13,15 @@ Vagrant.configure("2") do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "puppetlabs/ubuntu-14.04-64-puppet"
 
-  # Forward guest port 80 to host port 8888 and name mapping
-  # config.vm.network :forwarded_port, guest: 80, host: 8888
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 2048
+    v.cpus = 2
+  end
 
-  config.vm.network "private_network", ip: "192.168.50.11"
+  # Forward guest port 80 to host port 8888 and name mapping
+  config.vm.network :forwarded_port, guest: 80, host: 8810
+
+  config.vm.network "private_network", ip: "192.168.50.10"
 
   # config.vm.synced_folder "webroot/", "/vagrant/webroot/", :owner => "www-data"
   # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
