--- a/sugarcrm/sugarcrm-basic/Vagrantfile
+++ b/sugarcrm/sugarcrm-basic/Vagrantfile
@@ -1,7 +1,5 @@
 Vagrant.configure("2") do |config|
 
-  # config.vm.provision :shell, :path => "scripts/bootstrap-elasticsearch.sh"
-
   # Enable the Puppet provisioner, with will look in manifests
   config.vm.provision :puppet do |puppet|
     puppet.manifests_path = ""
@@ -9,9 +7,17 @@ Vagrant.configure("2") do |config|
     puppet.module_path = "modules"
   end
 
+  config.vm.provision :shell, :path => "scripts/bootstrap-elasticsearch.sh"
+
   config.vm.box = "dosbarras/raring32-lamp54"
 
-  config.vm.network "private_network", ip: "192.168.50.12"
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 2048
+    v.cpus = 2
+  end
+
+  config.vm.network :forwarded_port, guest: 80, host: 8811
+  config.vm.network "private_network", ip: "192.168.50.11"
 
   # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
   config.vm.synced_folder "webroot/", "/vagrant/webroot/", nfs: true, nfs_version: "4", nfs_udp: true
