--- a/sugarcrm-boxes/basic/Vagrantfile
+++ b/sugarcrm-boxes/basic/Vagrantfile
@@ -12,8 +12,11 @@ Vagrant.configure("2") do |config|
   config.vm.box = "dosbarras/raring32-lamp54"
 
   config.vm.provider "virtualbox" do |v|
-    v.memory = 3000
+    v.memory = 2500
     v.cpus = 4
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    v.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+    v.customize ["modifyvm", :id, "--ioapic", "on"]
   end
 
   config.vm.network :forwarded_port, guest: 80, host: 8811
