--- a/sugarcrm-boxes/basic/Vagrantfile
+++ b/sugarcrm-boxes/basic/Vagrantfile
@@ -23,7 +23,11 @@ Vagrant.configure("2") do |config|
   config.vm.network "private_network", ip: "192.168.50.11"
 
   # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
-  config.vm.synced_folder "webroot/", "/vagrant/webroot/", nfs: true, nfs_version: "4", nfs_udp: true
+  config.vm.synced_folder ".", "/vagrant", nfs: true
+  config.vm.synced_folder "webroot/sugarcrm", "/vagrant/webroot/sugarcrm", nfs: true, nfs_version: "4", nfs_udp: true
+
+  # config.vm.synced_folder "webroot/", "/vagrant/webroot/", type: "rsync",
+  #     rsync__auto: true, rsync__exclude: [".git/", "sugarcrm/cache/", "sugarcrm/upload/"]
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
