--- a/lamp/Vagrantfile
+++ b/lamp/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "virtualbox" do |v|
     v.memory = 2048
-    v.cpus = 2
+    v.cpus = 4
   end
 
   # Forward guest port 80 to host port 8810 and name mapping
@@ -26,6 +26,7 @@ Vagrant.configure("2") do |config|
   # config.vm.synced_folder "webroot/", "/vagrant/webroot/", :owner => "www-data"
   # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
   config.vm.synced_folder ".", "/vagrant", nfs: true, nfs_version: "3", nfs_udp: true
+  config.vm.synced_folder "webroot", "/vagrant/webroot", nfs: true, nfs_udp: true
 
   if Vagrant.has_plugin?("vagrant-cachier")
     # Configure cached packages to be shared between instances of the same base box.
