--- a/lamp/Vagrantfile
+++ b/lamp/Vagrantfile
@@ -20,7 +20,6 @@ Vagrant.configure("2") do |config|
 
   # Forward guest port 80 to host port 8810 and name mapping
   config.vm.network :forwarded_port, guest: 80, host: 8810
-
   config.vm.network "private_network", ip: "192.168.50.10"
 
   # config.vm.synced_folder "webroot/", "/vagrant/webroot/", :owner => "www-data"
@@ -32,7 +31,7 @@ Vagrant.configure("2") do |config|
     # Configure cached packages to be shared between instances of the same base box.
     # More info on http://fgrehm.viewdocs.io/vagrant-cachier/usage
     # Or :machine to save in .vagrant/machines/<machine-name>/cache
-    config.cache.scope = :box
+    config.cache.scope = :machine
 
     # OPTIONAL: If you are using VirtualBox, you might want to use that to enable
     # NFS for shared folders. This is also very useful for vagrant-libvirt if you
