--- a/nginx/Vagrantfile
+++ b/nginx/Vagrantfile
@@ -1,9 +1,8 @@
 Vagrant::configure("2") do |config|
-	# config.vm.hostname = "simple-vagrant.localhost"
 
 	config.vm.provision :puppet do |puppet|
 		puppet.manifests_path = "manifests"
-		puppet.manifest_file  = "base.pp"
+		puppet.manifest_file  = "default.pp"
 		puppet.module_path = "modules"
 	end
 
@@ -16,8 +15,8 @@ Vagrant::configure("2") do |config|
     end
 
     # Forward guest port 80 to host port 8810 and name mapping
-    config.vm.network :forwarded_port, guest: 80, host: 8814
-    config.vm.network "private_network", ip: "192.168.50.14"
+    config.vm.network :forwarded_port, guest: 80, host: 8811
+    config.vm.network "private_network", ip: "192.168.50.11"
 
     config.vm.synced_folder ".", "/vagrant", nfs: true, nfs_version: "3", nfs_udp: true
 
