--- a/sugarcrm-boxes/basic/Vagrantfile
+++ b/sugarcrm-boxes/basic/Vagrantfile
@@ -19,8 +19,8 @@ Vagrant.configure("2") do |config|
     v.customize ["modifyvm", :id, "--ioapic", "on"]
   end
 
-  config.vm.network :forwarded_port, guest: 80, host: 8811
-  config.vm.network "private_network", ip: "192.168.50.11"
+  config.vm.network :forwarded_port, guest: 80, host: 8820
+  config.vm.network "private_network", ip: "192.168.50.20"
 
   # If mount hangs install nfs-common and nfs-kernel-server, also the command may help: sudo rm -f /etc/exports
   config.vm.synced_folder ".", "/vagrant", nfs: true
@@ -30,7 +30,7 @@ Vagrant.configure("2") do |config|
   #     rsync__auto: true, rsync__exclude: [".git/", "sugarcrm/cache/", "sugarcrm/upload/"]
 
   if Vagrant.has_plugin?("vagrant-cachier")
-    config.cache.scope = :box
+    config.cache.scope = :machine
 
     config.cache.synced_folder_opts = {
       type: :nfs,
