--- a/lamp/Vagrantfile
+++ b/lamp/Vagrantfile
@@ -12,6 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "puppetlabs/ubuntu-14.04-64-puppet"
+  config.vm.box_version = "1.0.1"
 
   config.vm.provider "virtualbox" do |v|
     v.memory = 2048
