--- a/sugarcrm-boxes/job-queue/Vagrantfile
+++ b/sugarcrm-boxes/job-queue/Vagrantfile
@@ -7,6 +7,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.box = "puppetlabs/ubuntu-14.04-64-puppet"
+  config.vm.box_version = "1.0.1"
 
   config.vm.provider "virtualbox" do |v|
     v.memory = 2048
